Updated File Storaging System and FileUtils.